# cryspglib

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  char_reorder_map.txt  comment_array.py  convert_hall.py  convert_msgdb.py  convert_spg_database.py  convert_spgdb.py  do.sh  fix_all_arrays.py  fix_all_large_arrays.py  fix_hall_symbol.py  spg_database.rs  spg_database_gen.rs  test_debug.rs  test_debug2.rs  test_delaunay.rs  test_metric.rs  test_similar.rs  verify_arrays.py
examples/: irrep_demo.rs  sg159_lpoint.rs
scripts/: apply_char_reorder.py  check_iso_vs_spglib.py  check_phase_correction.py  debug_cir_pir_sg9.py  debug_mapping_sg9.py  direction_map.py  extract_sg_settings.py  generate_irrep_data.py  generate_irrep_docs.py  hall_operations.json  parse_spinor_data.py  regenerate_all.sh  test_spinor_wigner_formula.py  test_su2_closure.py  validate_cir_pir.py
src/: api.rs  arithmetic.rs  cell.rs  cof3_test.rs  crps4_test.rs  debug.rs  delaunay.rs  determination.rs  hall_symbol.rs  kgrid.rs  kpoint.rs  la2nio4_test.rs  lib.rs  magnetic_spacegroup.rs  magnetic_spacegroup_test.rs  mathfunc.rs  msg_database.rs  msg_database_gen.rs  niggli.rs  overlap.rs  parser.rs  pointgroup.rs  primitive.rs  refinement.rs  site_symmetry.rs  sitesym_database.rs  spacegroup.rs  spg_database.rs  spin.rs  symmetry.rs
tests/: bcs_corep_validation.rs  cof3.rs  crps4.rs  irrep_validation.rs  la2nio4.rs  magnetic_integration.rs
txtfile/: arithmetic.txt  delaunay.txt  hall_symbol.txt  kgrid.txt  mathfunc.txt  pointgroup.txt  spacegroup.txt  spg_database.txt  spin.txt
(+18 files in other folders)
