[package]
name = "cryspglib"
version = "0.1.0"
edition = "2024"
description = "A pure-Rust port of spglib — not a replacement, but a dependency-free alternative for Rust projects that need crystallographic symmetry routines without bundling a C toolchain."
license = "BSD-3-Clause"
repository = "https://github.com/spglib/spglib"

exclude = [
    "isotropy_subgroup/*.zip",
    "isotropy_subgroup/*.txt",
    "isotropy_subgroup/*.html",
    "scripts/",
    "docs/",
]

[dependencies]
thiserror = "2"
num-complex = "0.4"

[features]
debug-corep = []  # enable verbose Wigner test diagnostics (eprintln!)
